Project-2/LOCOAL/ets-k8s/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ets-user-service-deployment
  namespace: ets-dev
  labels:
    app: ets-user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ets-user-service
  template: # ← This was missing!
    metadata:
      name: ets-dev-pod
      labels:
        app: ets-user-service
    spec:
      containers:
        - name: ets-user-service-container
          image: chethan2527/user-service:latest
          resources:
            requests:
              cpu: "250m"
              memory: "100Mi"
            limits:
              cpu: "500m"
              memory: "100Mi"
