Project-2/LOCOAL/ets-k8s/Service.yml
# Update your service
apiVersion: v1
kind: Service
metadata:
  name: ets-user-service-svc
  namespace: ets-dev
spec:
  type: NodePort
  selector:
    app: ets-user-service
  ports:
    - port: 80
      targetPort: 4000
      nodePort: 30080
